Added final point for completed levels

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,16 @@
   <body>
     <main>
       <h1>Zenshin for Wanikani</h1>
-      <p>Display your Wanikani progress and estimate a forecast.</p>
+      <p>
+        Display your <a href="https://www.wanikani.com/">Wanikani</a> progress
+        and estimate a forecast.
+      </p>
       <form id="submitKey" action>
         Enter your API key: <input id="key" /><button type="submit">OK</button>
+        &nbsp; (You can obtain one
+        <a href="https://www.wanikani.com/settings/personal_access_tokens"
+          >here</a
+        >.)
       </form>
       <div id="chart-scroller">
         <div id="chart-container">
