Skip pauses and gaps in the computation; added download button

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
           <canvas id="chart"></canvas>
         </div>
       </div>
+      <button id="download" style="display: none">Download chart</button>
     </main>
     <footer>
       This website does not steal your API key. It is only stored locally in
