--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Zenshin for Wanikani</title>
+    <meta charset="utf8" />
     <meta
       name="description"
       content="Display your Wanikani progress and estimate a forecast."
