Added custom start date option

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,14 @@
           <canvas id="chart"></canvas>
         </div>
       </div>
-      <button id="download" style="display: none">Download chart</button>
+      <div id="bottom" style="display: none">
+        <span class="sm-line">
+          Custom start date: <input id="startDate" type="date" />
+        </span>
+        <span class="sm-line dashed">
+          <button id="download">Download chart</button>
+        </span>
+      </div>
     </main>
     <footer>
       This website does not steal your API key. It is only stored locally in
