Fix bug + trim key

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         Display your <a href="https://www.wanikani.com/">Wanikani</a> progress
         and estimate a forecast.
       </p>
-      <form id="submitKey" action>
+      <form id="submitForm" action>
         <span class="sm-line"> Enter your API key:</span>
         <span class="sm-line">
           <input id="key" /><button type="submit">OK</button>
